# Mammoth-A-TLS

./: .gitignore  LICENSE  README.md  info.md
Images/: 2-gang-electrical-box.drawio  Software_Schematic.drawio  acdc-converter-diagram.drawio  crydom-d1d40.drawio  file-structure-diagram.drawio  general-process-flow-diagram.drawio  hammond-xf4115-diagram.drawio  kts-011-diagram.drawio  mammoth-hardware.drawio  readme.md  riegl-vz400i-diagram.drawio  stealth-lpc-835-front-diagram.drawio  terminal-block-assembly-strip.drawio
Mammoth/: changelog  changelog.md  commands.txt  config  crontab  readme.md
Mammoth/AWS/: readme.md
Mammoth/Archive/: interfaces
Mammoth/Archive/2019-2020/: base-laz.json  crontab.txt  readme.md  scan-info.txt
Mammoth/Archive/2020-2021/: base-laz.json  crontab.txt  scan-info.txt  snow-sphere-2.json  snow-sphere.json
Mammoth/Archive/2021-2022/: base-laz.json  scan-info.txt
Mammoth/Archive/2023-2024/: base-laz.json  crontab.txt  readme.md  scan-info.txt
Mammoth/Archive/2025-bulk-livox-geo-config/: fix-laz.py  livox1-base.json  pdal_process  readme.md
Mammoth/Fintek/: readme.md
Mammoth/Lidar Collect/: readme.md
Mammoth/LidarCollect/: CMakeLists.txt  LidarCollect-wiki.docx  readme.md
Mammoth/Logs/: readme.md
Mammoth/Miniconda3/: readme.md
Mammoth/Questionable/: readme.md  snowcount  snowcounts
Mammoth/Questionable/Scans/: readme.md
Mammoth/RiVLIB/: readme.md
Mammoth/Scans/: readme.md
Mammoth/Scripts/: compress.sh  crontab  frame.sh  line.sh  readme.md  snow-sphere-2.sh  snow-sphere.sh  syncaws.sh
Mammoth/Scripts/AWS/: readme.md  syncaws
Mammoth/Scripts/GPIO/: daily_reboot  gpo_script  livox_poweroff  livox_poweron  livox_status  readme.md  scanner_poweroff  (+3 more)
Mammoth/Symlinks/: create_symlinks  readme.md
Mammoth/libLAS/: readme.md
Root/: crontab  interfaces  logs_split  netplan_config.yaml  poweroff_scanner  poweron_scanner  readme.md  scanner_shutdown  shutdown_scanner
Root/GPIO/: scanner_poweroff  scanner_poweron  scanner_shutdown
Scripts/: compress.sh  frame.sh  line.sh  poweroff_scanner  poweron_scanner  reboot_scanner  scanner_poweron  snow-sphere.sh
(+26 files in other folders)
